# agent101

./: .env.example  .gitignore  CLAUDE.md  README.md  agent101.ipynb  greet.py  math_helpers.py  mcp_demo_server.py  pyproject.toml  string_helpers.py  test_s02.txt  utils.py
.github/: copilot-instructions.md
.memory/: MEMORY.md  legacy_dir_keep.md  no_snapshot_changes.md  prefer_powershell.md
skills/code-review/: SKILL.md
